--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "react-cytoscape-provider",
+  "name": "react-cytoscape-tools",
   "version": "0.0.1",
-  "description": "A Cytoscape.js provider component for React",
+  "description": "Cytoscape.js modules for React",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "prop-types": "^15.6.2",
-    "react": "^16.6.0"
+    "prop-types": "^15.6.2"
   },
   "peerDependencies": {
+    "react": "^16.6.0",
     "cytoscape": "^3.2.19"
   }
 }
