--- a/package.json
+++ b/package.json
@@ -1,14 +1,42 @@
 {
   "name": "react-cytoscape-tools",
   "version": "0.0.1",
+  "scripts": {
+    "start": "BABEL_ENV=development webpack --config webpack.config.dev.js",
+    "build": "BABEL_ENV=production webpack --config webpack.config.prod.js"
+  },
   "description": "Cytoscape.js modules for React",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "prop-types": "^15.6.2"
+    "cytoscape": "^3.2.19",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.0"
   },
   "peerDependencies": {
-    "react": "^16.6.0",
-    "cytoscape": "^3.2.19"
+    "cytoscape": "^3.2.19",
+    "react": "^16.6.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "babel": "^6.23.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "babel-preset-react-app": "^6.1.0",
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-babel": "^5.2.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
   }
 }
