--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "react-cytoscape-tools",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
-    "start": "BABEL_ENV=development webpack --config webpack.config.dev.js --watch",
-    "build": "BABEL_ENV=production webpack --config webpack.config.prod.js",
-    "build-prod": "BABEL_ENV=production webpack --config webpack.config.prod.js"
+    "build": "BABEL_ENV=development npx rollup -c -o dist/index.js",
+    "build-prod": "BABEL_ENV=production npx rollup -c -o dist/index.min.js"
   },
   "description": "Cytoscape.js modules for React",
-  "main": "dist/react-cytoscape-tools.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "dependencies": {
     "cytoscape": "^3.2.19",
@@ -22,18 +21,19 @@
     "@babel/core": "^7.1.2",
     "babel": "^6.23.0",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
     "babel-preset-react-app": "^6.1.0",
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-loader": "^2.1.1",
     "eslint-plugin-babel": "^5.2.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "webpack": "^4.23.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-node-externals": "^1.7.2"
+    "rollup": "^0.66.6",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-uglify": "^6.0.0"
   },
   "babel": {
     "presets": [
