--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "license": "MIT",
   "dependencies": {
     "cytoscape": "^3.2.19",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.0"
+    "prop-types": "^15.6.2"
   },
   "peerDependencies": {
     "cytoscape": "^3.2.19",
     "react": "^16.6.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wgoldie/react-cytoscape-tools"
+  },
+  "keywords": ["cytoscape", "react"],
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "babel": "^6.23.0",
